# nix-pkgconfig

./: CLAUDE.md  README.md  flake.nix  pyproject.toml  treefmt.toml
modules/: default.nix  home-manager.nix  nixos.nix
overlays/: default.nix  uboot_NanopiR4S.nix
pkgs/: default.nix
pkgs/nix-pkg-config/: default.nix
pkgs/nix-pkg-config/src/: build-database.sh  build_pc_index.py
pkgs/nix-pkg-config/src/nix_pkg_config/: __init__.py  pkg_config.py
pkgs/nix-pkgconfig/: build-database.sh  build-pc-index.py  default.nix  pkg-config  pkg-config.py
