[project]
name = "nix-pkg-config"
version = "1.0.0"
description = "`nix-pkg-config` is a wrapper for `pkg-config` allowing nix-unaware applications (e.g. `cabal-install`) to use packages from `nixpkgs` (to satisfy native library dependencies)."
authors = [{ name = "vyls", email = "git@feils.me" }]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nix-pkg-config = "nix_pkg_config.pkg_config:main"
nix-pkg-config-build-pc-index = "nix_pkg_config.build_pc_index:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pkgs/nix-pkg-config/src"]

[tool.setuptools.package-dir]
"" = "pkgs/nix-pkg-config/src"
